--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "body-parser": "^1.18.2",
     "bootstrap-vue": "^2.0.0-rc.2",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "nuxt": "^1.0.0-rc3",
+    "pegjs": "^0.10.0",
     "source-map-support": "^0.4.15"
   },
   "devDependencies": {
