--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "seed": "babel-node scripts/seed.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.2",
     "bootstrap-vue": "^2.0.0-rc.2",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
+    "mongoose": "^5.0.12",
     "nuxt": "^1.0.0-rc3",
     "pegjs": "^0.10.0",
     "source-map-support": "^0.4.15"
