--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "bootstrap-vue": "^2.0.0-rc.2",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.12",
     "nuxt": "^1.0.0-rc3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.0",
     "pegjs": "^0.10.0",
     "source-map-support": "^0.4.15"
   },
