--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.12",
+    "morgan": "^1.9.0",
     "nuxt": "^1.0.0-rc3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
