--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "express-session": "^1.15.6",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
     "nuxt": "^1.0.0-rc3",
