--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.6",
     "lodash": "^4.17.5",
+    "moment": "^2.22.0",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
     "nuxt": "^1.0.0-rc3",
