--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "seed": "babel-node scripts/seed.js"
   },
   "dependencies": {
+    "@nuxtjs/vuetify": "^0.4.1",
     "axios": "^0.16.2",
     "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.2",
-    "bootstrap-vue": "^2.0.0-rc.2",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "express-session": "^1.15.6",
@@ -42,6 +43,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.4.0"
   }
 }
