--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.0",
     "pegjs": "^0.10.0",
-    "source-map-support": "^0.4.15"
+    "source-map-support": "^0.4.15",
+    "vue-particles": "^1.0.9"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
