--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
     image: mongoclient/mongoclient
     ports:
       - "3001:3000"
+    volumes:
+      - nosqlclient_data:/data/db
 
 volumes:
   mongo_data:
-
+  nosqlclient_data:
