--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
+    "heroku-postbuild": "npm run build",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "db:seed": "babel-node scripts/seed.js",
     "db:drop": "babel-node scripts/drop.js",
