--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.2",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
+    "express-basic-auth": "^1.1.5",
     "express-session": "^1.15.6",
     "lodash": "^4.17.5",
     "moment": "^2.22.0",
