--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 services:
   web:
@@ -7,6 +7,8 @@ services:
       - "3002:3000"
     environment:
       - MONGODB_URI=mongodb://mongo/main
+    depends_on:
+      - mongo
   mongo:
     image: mongo:3.6
     ports:
