--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
+    "up": "docker-compose up",
+    "down": "docker-compose down",
     "heroku-postbuild": "npm run build",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "db:seed": "babel-node scripts/seed.js",
