--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "algo-repo",
+  "name": "algorepo",
   "version": "1.0.0",
   "description": "A website hosting a repository of algorithms which users can use and publish",
   "author": "Daniel Carl Jones <dcjones1@sheffield.ac.uk>",
